parser: Fix small leak in json_parse_statement

https://bugzilla.gnome.org/show_bug.cgi?id=686096